syntax = "proto3";

package users.v1;

option go_package = "github.com/edanko/users-api/pkg/genproto/v1";

service UsersService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
  rpc SyncUsers(SyncUsersRequest) returns (SyncUsersResponse) {}
}

message SyncUsersRequest {}
message SyncUsersResponse {}

message User {
  string login = 1;
  string name = 2;
  string email = 3;
  repeated string groups = 4;
}

message GetUserRequest {
  string login = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUsersRequest {
  repeated string login = 1;
}

message GetUsersResponse {
  repeated User user = 1;
}
